fix: edit css for the riverland list for color contrast; edit mobile font size and button size

--- a/src/components/DataBlock/data-block-style.css
+++ b/src/components/DataBlock/data-block-style.css
@@ -14,7 +14,7 @@
 .data-block__content-row {
   border-bottom: 1px solid #ddd;
   padding: 0.25rem;
-  font-size: 0.5rem;
+  font-size: 0.8rem;
   display: flex;
   flex-direction: column;
 }
