--- a/src/components/ListItem/list-item-style.css
+++ b/src/components/ListItem/list-item-style.css
@@ -36,6 +36,7 @@
 
 .list-item__region--TheRiverlands {
   background-color: #3944bc;
+  color: #fff;
 }
 
 .list-item__region--IronIslands {
